# mm_bronze

./: .env  .gitignore  README.md  bronze_pg.Dockerfile  docker-compose.yaml  example.env  ingest_api.Dockerfile  pyproject.toml
docker/: ingest_sftp.Dockerfile  storage_api.Dockerfile  storage_sftp.Dockerfile
mm_bronze/common/: config.py  db.py  fs.py  kafka.py  log_config.py
mm_bronze/ingestion/api/: __init__.py  api.py  app.py  utils.py
mm_bronze/ingestion/sftp/: app.py  client.py  handle.py  server.py  user_manager.py  watcher.py
mm_bronze/postgres/initdb/: create_ingestion.sql
mm_bronze/storage/: utils.py
mm_bronze/storage/api/: api.py  app.py  processing.py
mm_bronze/storage/sftp/: app.py  processing.py
scripts/: compression_toolkit.py  install.ps1  install.sh  setup_dev_keys.sh  split_fhir_bundles.py  system_validator.py
tests/: conftest.py
tests/common/: test_config.py  test_db.py  test_fs.py  test_kafka.py
tests/ingestion/: send_curls.py  sftp_upload.py  simple_sftp_test.py  test_api_utils.py  test_sftp_connectivity.py  test_user_manager.py  utils.py
tests/integration/: __init__.py  synthea_utils.py  test_api_integration.py  test_end_to_end_pipeline.py  test_sftp_integration.py  utils.py
tests/storage/: run_sftp_tests.py  test_api_processing.py  test_pg.sql  test_sftp_processing.py  test_with_services.py
tests/test_data/fhir/r4/bundle/: Zena758_Stanton715_b6580e9f-346f-43ae-275f-e90518a38493.json
tests/test_data/fhir/r6/encounter/: encounter_1.json  encounter_1.xml  encounter_2.json  encounter_2.xml
tests/test_data/fhir/r6/patient/: patient_1.json  patient_1.xml  patient_2.json  patient_2.xml
