[project]
name = "mm-bronze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "fsspec>=2025.3.2",
    "orjson>=3.10.18",
    "paramiko>=3.5.1",
    "pydantic-settings>=2.9.1",
    "watchdog>=6.0.0",
    "xmltodict>=0.14.2",
]

[tool.setuptools]
packages = ["mm_bronze"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
